fix: style tune in dark mode

--- a/src/component/CreateNote/index.less
+++ b/src/component/CreateNote/index.less
@@ -10,6 +10,16 @@
     box-shadow: unset;
   }
 
+  .ant-picker-cell-selected {
+    .ant-picker-cell-inner {
+      .cell-container {
+        .chinese-cal {
+          color: #fff;
+        }
+      }
+    }
+  }
+
   .ant-picker-cell-inner {
     display: flex !important;
     width: 100% !important;
@@ -25,7 +35,7 @@
         display: block;
         line-height: initial;
         font-size: 11px;
-        color: rgba(0, 0, 0, 0.25);
+        color: rgba(153, 153, 153, 0.45);
       }
 
       .dot {
@@ -46,8 +56,8 @@
 
       .label {
         position: absolute;
-        top: -10px;
-        right: -10px;
+        top: -5px;
+        right: -8px;
         color: #fff;
         width: 13px;
         line-height: 13px;
@@ -55,7 +65,7 @@
         font-size: 8px;
 
         &.workday {
-          background-color: rgba(0, 0, 0, 0.25);
+          background-color: rgba(153, 153, 153, 0.45);
         }
 
         &.holiday {
